--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "0.35.2"
+    "@redwoodjs/api": "0.35.2",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.6.0"
   }
 }
