--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "passport": "^0.4.1",
-    "passport-oauth2": "^1.6.0"
+    "passport-oauth2": "^1.6.0",
+    "serverless-http": "^2.7.0"
   }
 }
