--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
 # REDWOOD_SECURE_SERVICES=1
+
+PASSPORT_AUTHORIZATION_URL=
+PASSPORT_TOKEN_URL=
+PASSPORT_CLIENT_ID=
+PASSPORT_CLIENT_SECRET=abc123
+# In order to rotate the secret without invalidating sessions, provide an array of secrets,
+# with the new secret as first element of the array, and including previous secrets as the
+# later elements.
+PASSPORT_SESSION_SECRET=
