--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "0.35.2",
+    "@redwoodjs/api": "^0.36.2",
     "connect-pg-simple": "^6.2.1",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
